_sass/_aboutus_listing_banner.scss
.aboutus-listing-banner {
    position: relative;
    h1 {
        position: absolute;
        top: 50%;
        transform: translateY(-50%);
        text-align: center;
        width: 100%;
        font-family: $Av-Black ;
        font-size: 72px;
        letter-spacing: .8px;
        color: $White;
        text-transform: uppercase;
        margin: 0px;
        @media (max-width: 768px) {
            font-size: 50px;
        }
        @media (max-width: 320px) {
            font-size: 26px;
        }
	}
}
.aboutus-offers{
	.header{
		    background-color: $White;
			p{
				color: #8d8d8d ;
			 }
		}
	.text-bold{
		color:$Secondary;
		}
	
	}

